// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SettingsSubsectionHeading /> renders with children 1`] = `
{
  "container": <div>
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h4
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        test
      </h4>
      <a
        href="/#"
      >
        test
      </a>
    </div>
  </div>,
}
`;

exports[`<SettingsSubsectionHeading /> renders without children 1`] = `
{
  "container": <div>
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h4
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        test
      </h4>
    </div>
  </div>,
}
`;
